Finsihed Part One

--- a/into-to-angular/part-one/index.html
+++ b/into-to-angular/part-one/index.html
@@ -11,9 +11,9 @@
 
 
 <body ng-controller="mainController">
-
+<button type="button" class="btn btn-success" ng-click = "exclaim()">EXCLAIM</button>
     <button type="button" class="btn btn-primary clickBait" ng-click="logging()">CLICK </button>
-    <h1 ng-show="myVar">{{message}}</h1>
+    <h1 ng-show="myVar">{{message}} </h1>
     <button type="button" class="btn btn-danger toggle" ng-click="toggle()">Click Me</button>
     <ul ng-show="anotherVar">
         <li>{{listItem1}}</li>
