--- a/hide-a-form/take-2/index.html
+++ b/hide-a-form/take-2/index.html
@@ -3,43 +3,106 @@
 
 <head>
     <meta charset="utf-8">
+
+    <!-- This is bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css">
+
+    <!-- This is my CSS file -->
     <link rel="stylesheet" href="main.css" type="text/css">
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+    <!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script> -->
+
+    <!-- This is jquery that is for bootstarop JS necessary  -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.js"></script>
+
+    <!-- This is bootstrap js -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.js"></script>
+
+    <!-- This is the script tag for angular js -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
     <title>Hide a Form Take 2</title>
 </head>
 
 <body ng-controller="MainCtrl as main">
 
-    <form class="profileStuff" ng-submit="main.submit()">
-        <h4>First Name: </h4>
-        <input type="text" name="name" ng-model="main.name" />
-        <h4>Bio: </h4>
-        <textarea rows="4" cols="50" ng-model="main.bio"></textarea>
-        <h4>Favorite Book: </h4>
-        <input type="text" name="name" ng-model="main.book">
-        <h4>Favorite javascript library: </h4>
-        <input type="text" name="name" ng-model="main.library">
-        <input type="submit" id="submit" value="Submit">
-    </form>
 
-    <div class="profile">
-        <h4>{{ main.name }}</h4>
-        <h4>{{ main.bio }}</h4>
-        <h4>{{ main.book }}</h4>
-        <h4>{{ main.library }}</h4>
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" ng-hide="main.hideTheThings">
+  Edit Profile
+</button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <form ng-submit="main.addInfo()">
+
+
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">Edit Your Profile</h4>
+                    </div>
+                    <div class="modal-body">
+                        <input class="form-control" type="text" ng-model="main.newPerson.name" placeholder="Name">
+                        <!-- <textarea class="form-control" type="text" ng-model="main.newPerson.bio" placeholder="Bio"> -->
+                        <textarea class="form-control" placeholder="Bio" rows="4" ng-model="main.newPerson.bio" cols="50"></textarea>
+                        <input class="form-control" type="text" ng-model="main.newPerson.book" placeholder="Favorite Book">
+                        <input class="form-control" type="text" ng-model="main.newPerson.library" placeholder="Favorite JS Library">
+                    </div>
+                    <div class="modal-footer">
+
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Save</button>
+                </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- This is the profile  -->
+
+    <div class="container-fluid profileStuff" ng-hide="main.hideTheThings">
+        <div class="row">
+            <div class="spell-item col-xs-12 col-sm-6" ng-repeat="person in main.profileInfo" track by $index>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h2>{{ person.name }}</h2>
+
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h2>{{ person.bio }}</h2>
+
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h2>{{ person.book }}</h2>
+
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h2>{{ person.library }}</h2>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
 
     </div>
 
-    <!-- <form ng-submit="main.submit()">
-        Enter text and hit enter:
-        <input type="text" ng-model="main.text" name="text" />
-        <input type="submit" id="submit" value="Submit" />
-        <pre>list={{main.list}}</pre>
-    </form> -->
+    <!-- These are my js files -->
+    <!-- When using angular files make sure that the module is included first -->
 
-    <script type="text/javascript" src="myScripts.js">
-    </script>
+    <script type="text/javascript" src="myScripts.js"></script>
+
 </body>
 
 </html>
